ACLOCAL_AMFLAGS=-I m4

SUBDIRS = nunn nunn_topo mnist mnist_test tictactoe and_test xor_test hopfield_test

EXTRA_DIST= \
   ocr_test \
   *.sln \
   nunn/*.vcxproj* \
   nunn_topo/*.vcxproj* \
   mnist/*.vcxproj* \
   mnist_test/*.vcxproj* \
   mnist_test/*ubyte \
   *.net \
   tictactoe/*.vcxproj* \
   tictactoe/*.net \
   tictactoe/*.sh \
   xor_test/*.vcxproj* \
   hopfield_test/*.vcxproj* \
   and_test/*.vcxproj* \
   winttt
