ACLOCAL_AMFLAGS=-I m4

SUBDIRS = \
   nunn \
   nunn_topo \
   mnist \
   examples/mnist_test \
   examples/tictactoe \
   examples/and_test \
   examples/xor_test \
   examples/counter_test \
   examples/hopfield_test

EXTRA_DIST= \
   ocr_test \
   *.sln \
   *.iss \
   *.net \
   nunn/*.vcxproj* \
   nunn_topo/*.vcxproj* \
   mnist/*.vcxproj* \
   examples/mnist_test/*.vcxproj* \
   examples/mnist_test/*ubyte \
   examples/tictactoe/*.vcxproj* \
   examples/tictactoe/*.net \
   examples/tictactoe/*.sh \
   examples/xor_test/*.vcxproj* \
   examples/counter_test/*.vcxproj* \
   examples/hopfield_test/*.vcxproj* \
   examples/and_test/*.vcxproj* \
   examples/winttt
