cmake_minimum_required(VERSION 3.12)
project(nunnlib)

add_subdirectory(and_test)
add_subdirectory(rnn_sine)
add_subdirectory(rnn_char)
add_subdirectory(counter_test)
add_subdirectory(hopfield_test)
add_subdirectory(maze)
add_subdirectory(mnist_test)
add_subdirectory(path_finder)
add_subdirectory(tictactoe)
add_subdirectory(xor_test)
add_subdirectory(titanic)

if(WIN32)
    add_subdirectory(ocr_test)
    add_subdirectory(winttt)
endif()
