AM_CPPFLAGS =

lib_LTLIBRARIES = libnunn.la

libnunn_la_LDFLAGS = -version-info 1:0:0

libnunn_la_SOURCES = \
   nu_mlpnn.cc \
   nu_perceptron.cc \
   nu_bpnn.h \
   nu_mlpnn.h \
   nu_sigmoid.h \
   nu_vector.h \
   nu_neuron.h \
   nu_perceptron.h \
   nu_stepf.h \
   nu_trainer.h 

AM_CXXFLAGS = $(INTI_CFLAGS) -std=c++11 

