AM_CPPFLAGS =

lib_LTLIBRARIES = libnunn.la

libnunn_la_LDFLAGS = -version-info 1:0:0

libnunn_la_SOURCES = \
    nu_costfuncs.cc \
    nu_costfuncs.h \
    nu_hopfieldnn.cc \
    nu_hopfieldnn.h \
    nu_mlpnn.cc \
    nu_mlpnn.h \
    nu_neuron.h \
    nu_perceptron.cc \
    nu_perceptron.h \
    nu_qlgraph.cc \
    nu_qlgraph.h \
    nu_qmtx.cc \
    nu_qmtx.h \
    nu_rmlpnn.cc \
    nu_rmlpnn.h \
    nu_rneuron.h \
    nu_sigmoid.h \
    nu_stepf.h \
    nu_trainer.h \
    nu_vector.h \
    nu_xmlpnn.h    

AM_CXXFLAGS = $(INTI_CFLAGS) -std=c++11 

